2008-12-22  Dominique Dumont  <dominique.dumont@hp.com> v1.204

	* *.pm: replaced Tango icons with Crystal icons (LGPL) to comply
	with Debian DFSG.

2008-11-20  Dominique Dumont  <dominique.dumont@hp.com>

	* lib/Config/Model/Tk/HashEditor.pm (add_entry): Fixed bug that
	prevented to insert a new item in the middle of an ordered hash

2008-11-16  Domi  <domi@bilbo.maison>

	* lib/Config/Model/Tk/ListEditor.pm (remove_selection): fixed bug
	that displayed wrong indexes when deleting an element of a list of
	nodes.

2008-10-13  Dominique Dumont  <dominique.dumont@hp.com> v1.203

	* lib/Config/Model/Tk/CheckListEditor.pm: added Notebook tab to
	provide 2 ways to edit an ordered checklist: change the
	content (check or uncheck items) or change the order of the
	items. This feature is necessary to correctly edit the Ciphers
	list of ssh_config model (See Config::Model::OpenSsh)

	* Build.PL: Extract version from Config/Model/TkUI.pm (hence the
	bump to v 1.203) so that the pm file versions matches the
	.tgz distribution version.

2008-10-01  Dominique Dumont  <dominique.dumont@hp.com>

	* lib/Config/Model/Tk/ListEditor.pm (Populate): Better handles
	list of enum values

2008-08-01  Dominique Dumont  <dominique.dumont@hp.com>

	* lib/Config/Model/TkUI.pm (edit_paste): Cut'n'paste improvements
	for list elements

2008-07-30  Dominique Dumont  <dominique.dumont@hp.com>

	* lib/Config/Model/Tk/ListEditor.pm (swap): No more hiccups when
	moving list items past boundaries. Indexes are no longer moved in
	the rightmost box when moving node items in a list. It was
	confusing to have array indexes in the wrong order.

2008-07-25  Dominique Dumont  <dominique.dumont@hp.com> v0.202

	* lib/Config/Model/Tk/ListEditor.pm (Populate): can now move up
	and down node list items. This is handy when order of nodes is
	important.

2008-06-18  Dominique Dumont v0.201

	* lib/Config/Model/TkUI.pm (Populate): Replaced "placeholder" with logo