@@ -5,8 +5,9 @@ This module provides a Perl/Tk interface to:
 - the configuration editor provided by Config::Model.
 - the configuration model editor provided by Config::Model::Itself
 
-For instance, with this module, Config::Model and Config::Model::Xorg,
-you get a graphical configuration editor for Xorg.
+For instance, with this module, Config::Model and
+Config::Model::OpenSsh, you get a graphical configuration editor for
+sshd_config.
 
 All icons used in this application were created by Crystal Project.
 They are licensed under LGPL. http://www.everaldo.com/crystal/
@@ -39,7 +40,7 @@ If you want to help, please send a mail to:
 Legalese:
 
 
-    Copyright (c) 2008 Dominique Dumont.
+    Copyright (c) 2008-2009 Dominique Dumont.
 
     This file is part of Config-Model-TkUI.
 
