@@ -1,3 +1,10 @@
+2009-02-25  Dominique Dumont  <dominique.dumont@hp.com> v1.205
+
+	* lib/Config/Model/Tk/LeafEditor.pm (cleanup): new method (and
+	Text editor button) to normalize white space in a string. Useful
+	when filling configuratio parameter description from a man page
+	cut'n'paste.
+
 2008-12-22  Dominique Dumont  <dominique.dumont@hp.com> v1.204
 
 	* *.pm: replaced Tango icons with Crystal icons (LGPL) to comply
